Code cleaned up, removed dependency on inlined_functions from old GiRaFFE. Added validation checks and a more detailed derivation to the tutorial. Revised A to B scheduling, but still in progress.

--- a/Tutorial-GiRaFFE_Higher_Order.ipynb
+++ b/Tutorial-GiRaFFE_Higher_Order.ipynb
@@ -111,30 +111,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will now find the densitized Poynting flux given by equation 21 in [the original paper](https://arxiv.org/pdf/1704.00599.pdf), $$\\tilde{S}_i = \\gamma_{ij} \\frac{(v^j+\\beta^j)\\sqrt{\\gamma}B^2}{4 \\pi \\alpha}.$$ This is needed to set initial data for $\\tilde{S}_i$. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "StildeD = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"StildeD\")\n",
-    "B2 = sp.sympify(0)\n",
-    "for i in range(DIM):\n",
-    "    for j in range(DIM):\n",
-    "        B2 += gammaDD[i][j] * BU[i] * BU[j]\n",
-    "for i in range(DIM):\n",
-    "    StildeD[i] = 0\n",
-    "    for j in range(DIM):\n",
-    "        StildeD[i] += gammaDD[i][j] * (ValenciavU[j])*sp.sqrt(gammadet)*B2/4/M_PI\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Recall that the four-metric $g_{\\mu\\nu}$ is related to the three-metric $\\gamma_{ij}$, lapse $\\beta_i$, and shift $\\alpha$ by  \n",
     "$$\n",
     "g_{\\mu\\nu} = \\begin{pmatrix} \n",
@@ -147,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,6 +322,7 @@
     "alphau0 = alpha * u0\n",
     "alphau0_dD = ixp.declarerank1(\"alphau0_dD\")\n",
     "\n",
+    "# We'll let these be handled by finite differencing.\n",
     "uU_dD = ixp.declarerank2(\"uU_dD\",\"nosym\")\n",
     "#for i in range(DIM):\n",
     "#     for j in range(DIM):\n",
@@ -387,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,12 +394,20 @@
     "Now, we will code the derivatives of the spatial components of $b^{\\mu}$, $b^i$.\n",
     "$$\n",
     "b^i_{,k} = \\frac{1}{\\sqrt{4 \\pi}} \\frac{\\alpha u^0 (B^i_{,k} + u_{j,k} B^j u^i + u_j B^j_{,k} u^i + u_j B^j u^i_{,k}) - (B^i + u_j B^j u^i)(\\alpha_{,k} u^0 + \\alpha u^0_{,k})}{(\\alpha u^0)^2} \n",
-    "$$"
+    "$$\n",
+    "\n",
+    "Let's go into a little more detail on where this comes from. We start from the definition $$b^i = \\frac{B^i + (u_j B^j) u^i}{\\sqrt{4\\pi}\\alpha u^0};$$ We then apply the quotient rule: \n",
+    "\\begin{align}\n",
+    "b^i_{,k} &= \\frac{\\left(\\sqrt{4\\pi}\\alpha u^0\\right) \\partial_k \\left(B^i + (u_j B^j) u^i\\right) - \\left(B^i + (u_j B^j) u^i\\right) \\partial_k \\left(\\sqrt{4\\pi}\\alpha u^0\\right)}{\\left(\\sqrt{4\\pi}\\alpha u^0\\right)^2} \\\\\n",
+    "&= \\frac{1}{\\sqrt{4 \\pi}} \\frac{\\left(\\alpha u^0\\right) \\partial_k \\left(B^i + (u_j B^j) u^i\\right) - \\left(B^i + (u_j B^j) u^i\\right) \\partial_k \\left(\\alpha u^0\\right)}{\\left(\\alpha u^0\\right)^2} \\\\\n",
+    "\\end{align}\n",
+    "Note that $\\left( \\alpha u^0 \\right)$ is being used as its own gridfunction, so we can be done with that term. We will now apply the product rule to the term $\\partial_k \\left(B^i + (u_j B^j) u^i\\right) = B^i_{,k} + u_{j,k} B^j u^i + u_j B^j_{,k} u^i + u_j B^j u^i_{,k}$. So, \n",
+    "$$ b^i_{,k} = \\frac{1}{\\sqrt{4 \\pi}} \\frac{\\left(\\alpha u^0\\right)  \\left(B^i_{,k} + u_{j,k} B^j u^i + u_j B^j_{,k} u^i + u_j B^j u^i_{,k}\\right) - \\left(B^i + (u_j B^j) u^i\\right) \\partial_k \\left(\\alpha u^0\\right)}{\\left(\\alpha u^0\\right)^2}. $$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,11 +586,109 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will now find the densitized Poynting flux given by equation 21 in [the original paper](https://arxiv.org/pdf/1704.00599.pdf), $$\\tilde{S}_i = \\gamma_{ij} \\frac{(v^j+\\beta^j)\\sqrt{\\gamma}B^2}{4 \\pi \\alpha}.$$ This is needed to set initial data for $\\tilde{S}_i$. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "StildeD = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"StildeD\")\n",
+    "BU = ixp.declarerank1(\"BU\") # Reset the values in BU so that the C code accesses the gridfunctions directly\n",
+    "B2 = sp.sympify(0)\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        B2 += gammaDD[i][j] * BU[i] * BU[j]\n",
+    "for i in range(DIM):\n",
+    "    StildeD[i] = 0\n",
+    "    for j in range(DIM):\n",
+    "        StildeD[i] += gammaDD[i][j] * (ValenciavU[j])*sp.sqrt(gammadet)*B2/4/M_PI\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### NRPy+ Module Code Validation\n",
+    "\n",
+    "Here, as a code validation check, we verify agreement in the SymPy expressions for the $\\giraffe$ evolution equations and auxiliary quantities we intend to use between\n",
+    "1. this tutorial and \n",
+    "2. the NRPy+ [GiRaFFE_Higher_Order.py](../edit/GiRaFFE_HO/GiRaFFE_Higher_Order.py) module.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vvv Ignore the minor warning below. vvv\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter smallbPoynET::GAMMA_SPEED_LIMIT\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter smallbPoynET::u0\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter smallbPoynET::M_PI\n",
+      "^^^ Ignore the minor warning above. ^^^\n",
+      "\n",
+      "Consistency check between MaxwellCartesian tutorial and NRPy+ module: ALL SHOULD BE ZERO.\n",
+      "alphau0 - gho.alphau0 = 0\n",
+      "alpsqrtgam - gho.alpsqrtgam = 0\n",
+      "AevolParen - gho.AevolParen = 0\n",
+      "psi6Phi_rhs - gho.psi6Phi_rhs = 0\n",
+      "uD[0] - gho.uD[0] = 0\n",
+      "uU[0] - gho.uU[0] = 0\n",
+      "PevolParenU[0] - gho.PevolParenU[0] = 0\n",
+      "Stilde_rhsD[0] - gho.Stilde_rhsD[0] = 0\n",
+      "A_rhsD[0] - gho.A_rhsD[0] = 0\n",
+      "StildeD[0] - gho.StildeD[0] = 0\n",
+      "uD[1] - gho.uD[1] = 0\n",
+      "uU[1] - gho.uU[1] = 0\n",
+      "PevolParenU[1] - gho.PevolParenU[1] = 0\n",
+      "Stilde_rhsD[1] - gho.Stilde_rhsD[1] = 0\n",
+      "A_rhsD[1] - gho.A_rhsD[1] = 0\n",
+      "StildeD[1] - gho.StildeD[1] = 0\n",
+      "uD[2] - gho.uD[2] = 0\n",
+      "uU[2] - gho.uU[2] = 0\n",
+      "PevolParenU[2] - gho.PevolParenU[2] = 0\n",
+      "Stilde_rhsD[2] - gho.Stilde_rhsD[2] = 0\n",
+      "A_rhsD[2] - gho.A_rhsD[2] = 0\n",
+      "StildeD[2] - gho.StildeD[2] = 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Reset the list of gridfunctions, as registering a gridfunction\n",
+    "#   twice will spawn an error.\n",
+    "gri.glb_gridfcs_list = []\n",
+    "\n",
+    "print(\"vvv Ignore the minor warning below. vvv\")\n",
+    "\n",
+    "import GiRaFFE_HO.GiRaFFE_Higher_Order as gho\n",
+    "gho.GiRaFFE_Higher_Order()\n",
+    "\n",
+    "print(\"^^^ Ignore the minor warning above. ^^^\\n\")\n",
+    "\n",
+    "print(\"Consistency check between MaxwellCartesian tutorial and NRPy+ module: ALL SHOULD BE ZERO.\")\n",
+    "\n",
+    "print(\"alphau0 - gho.alphau0 = \" + str(alphau0 - gho.alphau0))\n",
+    "print(\"alpsqrtgam - gho.alpsqrtgam = \" + str(alpsqrtgam - gho.alpsqrtgam))\n",
+    "print(\"AevolParen - gho.AevolParen = \" + str(AevolParen - gho.AevolParen))\n",
+    "print(\"psi6Phi_rhs - gho.psi6Phi_rhs = \" + str(psi6Phi_rhs - gho.psi6Phi_rhs))\n",
+    "for i in range(DIM):\n",
+    "\n",
+    "    print(\"uD[\"+str(i)+\"] - gho.uD[\"+str(i)+\"] = \" + str(uD[i] - gho.uD[i]))\n",
+    "    print(\"uU[\"+str(i)+\"] - gho.uU[\"+str(i)+\"] = \" + str(uU[i] - gho.uU[i]))\n",
+    "    print(\"PevolParenU[\"+str(i)+\"] - gho.PevolParenU[\"+str(i)+\"] = \" + str(PevolParenU[i] - gho.PevolParenU[i]))\n",
+    "    print(\"Stilde_rhsD[\"+str(i)+\"] - gho.Stilde_rhsD[\"+str(i)+\"] = \" + str(Stilde_rhsD[i] - gho.Stilde_rhsD[i]))\n",
+    "    print(\"A_rhsD[\"+str(i)+\"] - gho.A_rhsD[\"+str(i)+\"] = \" + str(A_rhsD[i] - gho.A_rhsD[i]))\n",
+    "    print(\"StildeD[\"+str(i)+\"] - gho.StildeD[\"+str(i)+\"] = \" + str(StildeD[i] - gho.StildeD[i]))\n"
+   ]
   }
  ],
  "metadata": {
