--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb
@@ -116,7 +116,7 @@
       "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
       "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::RMAX\n",
       "Generating C code for BSSN RHSs in Spherical coordinates.\n",
-      "Finished in 35.6662809849 seconds.\n"
+      "Finished in 32.8279128075 seconds.\n"
      ]
     }
    ],
@@ -187,7 +187,7 @@
      "output_type": "stream",
      "text": [
       "Generating C code for Hamiltonian constraint\n",
-      "Finished in 11.4665849209 seconds.\n"
+      "Finished in 9.94252204895 seconds.\n"
      ]
     }
    ],
@@ -1040,25 +1040,34 @@
      "output_type": "stream",
      "text": [
       "Now compiling, should take ~30 seconds...\n",
-      "13.32user 0.14system 0:13.47elapsed 99%CPU (0avgtext+0avgdata 444676maxresident)k\n",
-      "0inputs+2008outputs (0major+113857minor)pagefaults 0swaps\n",
-      "Finished compiling, now running at low-resolution. Should take ~15 seconds...\n",
-      "15.10user 0.01system 0:07.56elapsed 199%CPU (0avgtext+0avgdata 11732maxresident)k\n",
-      "0inputs+128outputs (0major+3464minor)pagefaults 0swaps\n",
-      "Finished low-resolution run, now running at higher-resolution. Should take ~90 seconds...\n",
-      "46.82user 0.02system 0:23.43elapsed 199%CPU (0avgtext+0avgdata 16896maxresident)k\n",
-      "0inputs+216outputs (0major+5416minor)pagefaults 0swaps\n"
+      "Finished in 10.2222411633 seconds. Now running at low-resolution. Should take ~15 seconds...\n",
+      "9.53user 0.02system 0:04.79elapsed 199%CPU (0avgtext+0avgdata 11844maxresident)k\n",
+      "0inputs+128outputs (0major+3459minor)pagefaults 0swaps\n",
+      "Finished in 4.81467008591 seconds, now running at higher-resolution. Should take ~45 seconds...\n",
+      "29.57user 0.03system 0:14.87elapsed 198%CPU (0avgtext+0avgdata 17012maxresident)k\n",
+      "0inputs+216outputs (0major+5412minor)pagefaults 0swaps\n",
+      "Finished in 14.8934857845 seconds.\n"
      ]
     }
    ],
    "source": [
     "!cd BSSN/\n",
+    "\n",
     "print(\"Now compiling, should take ~30 seconds...\")\n",
-    "!time gcc -Ofast -march=native -ftree-parallelize-loops=2 -fopenmp BSSN/BSSNCurvilinear_Playground.c -o BSSNCurvilinear_Playground -lm\n",
-    "print(\"Finished compiling, now running at low-resolution. Should take ~15 seconds...\")\n",
+    "start = time.time()\n",
+    "!gcc -Ofast -march=native -ftree-parallelize-loops=2 -fopenmp BSSN/BSSNCurvilinear_Playground.c -o BSSNCurvilinear_Playground -lm\n",
+    "end = time.time()\n",
+    "print(\"Finished in \"+str(end-start)+\" seconds. Now running at low-resolution. Should take ~15 seconds...\")\n",
+    "\n",
+    "start = time.time()\n",
     "!time taskset -c 0,1 ./BSSNCurvilinear_Playground 48 12 2 > out48.txt\n",
-    "print(\"Finished low-resolution run, now running at higher-resolution. Should take ~90 seconds...\")\n",
-    "!time taskset -c 0,1 ./BSSNCurvilinear_Playground 64 16 2 > out64.txt"
+    "end = time.time()\n",
+    "print(\"Finished in \"+str(end-start)+\" seconds, now running at higher-resolution. Should take ~45 seconds...\")\n",
+    "\n",
+    "start = time.time()\n",
+    "!time taskset -c 0,1 ./BSSNCurvilinear_Playground 64 16 2 > out64.txt\n",
+    "end = time.time()\n",
+    "print(\"Finished in \"+str(end-start)+\" seconds.\")"
    ]
   },
   {
