Expanding and clarifying the tutorial portion and some of the code to make it easier to follow.

--- a/Tutorial-GiRaFFE_Higher_Order.ipynb
+++ b/Tutorial-GiRaFFE_Higher_Order.ipynb
@@ -204,7 +204,7 @@
     "u^i &= u^0 (\\alpha v^i_{(n)} - \\beta^i), \\\\\n",
     "u_j &= \\alpha u^0 \\gamma_{ij} v^i_{(n)}, \\\\\n",
     "\\end{align}\n",
-    "and $v^i_{(n)}$ is the Valencia three-velocity, as shown in [Duez, et al, eqs. 53 and 56](https://arxiv.org/pdf/astro-ph/0503420.pdf). The values of $u^0$ and $v^i_{(n)}$ can be read from HydroBase and IllinoisGRMHD. These have already been built by the u0_smallb_Poynting__Cartesian.py module, so we can simply import the variables.\n"
+    "and $v^i_{(n)}$ is the Valencia three-velocity, as shown in [Duez, et al, eqs. 53 and 56](https://arxiv.org/pdf/astro-ph/0503420.pdf). These have already been built by the u0_smallb_Poynting__Cartesian.py module, so we can simply import the variables.\n"
    ]
   },
   {
@@ -290,22 +290,38 @@
     "\\begin{align}\n",
     "\\partial_j T^{j}_{{\\rm EM} i} &= \\partial_j (\\gamma_{ki} T^{kj}_{\\rm EM}) \\\\\n",
     "&= \\partial_j [\\gamma_{ki} (b^2 u^j u^k + \\frac{b^2}{2} g^{jk} - b^j b^k)] \\\\\n",
-    "&= \\gamma_{ki,j} T^{kj}_{\\rm EM} + \\\\\n",
-    "&\\gamma_{ki} \\left(\\left(\\gamma_{lm,j} b^l b^m + 2 b_l b^l_{,j}\\right) u^j u^k +b^2 u^j_{,j} u^k + b^2 u^j u^k_{,j} + \\frac{1}{2}\\left(\\gamma_{lm,j} b^l b^m + 2 b_l b^l_{,j}\\right)g^{jk} + \\frac{b^2}{2} g^{jk}_{\\ ,j} + b^j_{,j} b^k + b^j b^k_{,j}\\right),\n",
+    "&= \\gamma_{ki,j} T^{kj}_{\\rm EM} + \\gamma_{ki} \\left( \\underbrace{\\partial_j \\left(b^2 u^j u^k\\right)}_{\\rm Term\\ 1} + \\underbrace{\\partial_j \\left(\\frac{b^2}{2} g^{jk}\\right)}_{\\rm Term\\ 2} - \\underbrace{\\partial_j \\left(b^j b^k\\right)}_{\\rm Term\\ 3} \\right) \\\\\n",
+    "\\end{align}\n",
+    "Following the product and chain rules for each term (and recalling that $b^2 = \\gamma_{ij} b^i b^j$, so $\\partial_k b^2 = \\gamma_{ij,k} b^i b^j + \\gamma_{ij} b^i_{,k} b^j + \\gamma_{ij} b^i b^j_{,k} = \\gamma_{ij,k} b^i b^j + b_j b^j_{,k}$), we find that \n",
+    "\\begin{align}\n",
+    "{\\rm Term\\ 1} &= \\partial_j (b^2 u^j u^k) \\\\\n",
+    "              &= \\partial_j b^2 u^j u^k + b^2 \\partial_j u^j u^k + b^2 u^j \\partial_j u_k \\\\\n",
+    "              &= \\left(\\gamma_{lm,j} b^l b^m + 2 b_l b^l_{,j}\\right) u^k u^k + b^2 u^j_{,j} u^k + b^2 u^j u^k_{,j} \\\\\n",
+    "{\\rm Term\\ 2} &= \\partial_j (\\frac{b^2}{2} g^{jk}) \\\\\n",
+    "              &= \\frac{1}{2} \\left( \\partial_j b^2 g^{jk} + b^2 \\partial_j g^{jk} \\right) \\\\\n",
+    "              &= \\frac{1}{2}\\left(\\gamma_{lm,j} b^l b^m + 2 b_l b^l_{,j}\\right)g^{jk} + \\frac{b^2}{2} g^{jk}_{\\ ,j} \\\\\n",
+    "{\\rm Term\\ 3} &= \\partial_j (b^j b^k) \\\\\n",
+    "              &= b^j_{,j} b^k + b^j b^k_{,j}\\\\\n",
+    "\\end{align}\n",
+    "\n",
+    "So, \n",
+    "\\begin{align}\n",
+    "\\partial_j T^{j}_{{\\rm EM} i} &= \\gamma_{ki,j} T^{kj}_{\\rm EM} \\\\\n",
+    "&+ \\gamma_{ki} \\left(\\left(\\gamma_{lm,j} b^l b^m + 2 b_l b^l_{,j}\\right) u^j u^k +b^2 u^j_{,j} u^k + b^2 u^j u^k_{,j} + \\frac{1}{2}\\left(\\gamma_{lm,j} b^l b^m + 2 b_l b^l_{,j}\\right)g^{jk} + \\frac{b^2}{2} g^{jk}_{\\ ,j} + b^j_{,j} b^k + b^j b^k_{,j}\\right),\n",
     "\\end{align}\n",
     "where \n",
     "\\begin{align}\n",
-    "u^i_{,j} &= u^0_{,j} (\\alpha v^i_{(n)} - \\beta^i) + u^0 (\\alpha_{,j} v^i_{(n)} + \\alpha v^i_{(n),j} - \\beta^i_{,j}) \\\\\n",
-    "u_{j,k} &= \\alpha_{,k} u^0 \\gamma_{ij} v^i_{(n)} + \\alpha u^0_{,k} \\gamma_{ij} v^i_{(n)} + \\alpha u^0 \\gamma_{ij,k} v^i_{(n)} + \\alpha u^0 \\gamma_{ij} v^i_{(n),k} \\\\\n",
+    "%u^i_{,j} &= u^0_{,j} (\\alpha v^i_{(n)} - \\beta^i) + u^0 (\\alpha_{,j} v^i_{(n)} + \\alpha v^i_{(n),j} - \\beta^i_{,j}) \\\\\n",
+    "%u_{j,k} &= \\alpha_{,k} u^0 \\gamma_{ij} v^i_{(n)} + \\alpha u^0_{,k} \\gamma_{ij} v^i_{(n)} + \\alpha u^0 \\gamma_{ij,k} v^i_{(n)} + \\alpha u^0 \\gamma_{ij} v^i_{(n),k} \\\\\n",
     "b^i_{,k} &= \\frac{1}{\\sqrt{4 \\pi}} \\frac{\\alpha u^0 (B^i_{,k} + u_{j,k} B^j u^i + u_j B^j_{,k} u^i + u_j B^j u^i_{,k}) - (B^i + u_j B^j u^i)(\\alpha_{,k} u^0 + \\alpha u^0_{,k})}{(\\alpha u^0)^2} \\\\\n",
-    "B^i_{,i} &= -\\frac{\\gamma_{,i} \\tilde{B}^i}{2\\gamma} \\\\\n",
+    "B^i_{,i} &= -\\frac{\\gamma_{,i} B^i}{2\\gamma} \\\\\n",
     "B^i_{,l} &= \\partial_l \\left( \\frac{[ijk]}{\\sqrt{\\gamma}} \\partial_j A_k \\right) = [ijk] \\partial_l \\left( \\frac{1}{\\sqrt{\\gamma}}\\right) \\partial_j A_k + \\frac{[ijk]}{\\sqrt{\\gamma}} \\partial_l \\partial_j A_k \\\\\n",
     "&= [ijk]\\left(-\\frac{\\gamma_{,l}}{2\\gamma^{3/2}}\\right) \\partial_j A_k + \\frac{[ijk]}{\\sqrt{\\gamma}} \\partial_l \\partial_j A_k \\\\\n",
     "&= -\\frac{\\gamma_{,l}}{2\\gamma} \\epsilon^{ijk} \\partial_j A_k + \\epsilon^{ijk} \\partial_l \\partial_j A_k \\\\\n",
     "&= -\\frac{\\gamma_{,l}}{2\\gamma} B^i + \\epsilon^{ijk} A_{k,jl}, i \\neq l, \\\\\n",
     "\\end{align}\n",
     "\n",
-    "First, we will handle the derivatives of the velocity $u^i$ and its lowered form. We will simply use finite-difference derivatives here since $u^i$ and $u_i$ are already gridfunctions. This will reduce the chances for finite differencing errors to accumulate, because the alternative is to use a function of several finite-difference derivatives."
+    "First, we will handle the derivatives of the velocity $u^i$ and its lowered form. We will simply use finite-difference derivatives here by setting $u^i$ and $u_i$ as gridfunctions (done above). This will reduce the chances for finite differencing errors to accumulate, because the alternative is to use a function of several finite-difference derivatives."
    ]
   },
   {
@@ -337,25 +353,20 @@
     "#            uD_dD[j][k] =  alpha_dD[k]*u0*gammaDD[i][j]*ValenciavU[i]\\\n",
     "#                         + alpha*u0_dD[k]*gammaDD[i][j]*ValenciavU[i]\\\n",
     "#                         + alpha*u0*gammaDD_dD[i][j][k]*ValenciavU[i]\\\n",
-    "#                         + alpha*u0*gammaDD[i][j]*ValenciavU_dD[i][k]\\\n",
-    "\n",
-    "#alpsqrtgamTEMUD = ixp.register_gridfunctions_for_single_rank2(\"AUX\",\"alpsqrtgamTEMUD\",\"nosym\")\n",
-    "#for i in range(DIM):\n",
-    "#    for j in range(DIM):\n",
-    "#        for k in range(DIM):\n",
-    "#            # Since TEMUU is a 4D quantity, we increment its indices to match gamma\n",
-    "#            alpsqrtgamTEMUD[i][j] = alpha * sp.sqrt(gammadet) * gammaDD[k][i] * TEMUU[j+1][k+1]\n",
-    "#\n",
-    "#alpsqrtgamTEMUD_dD = ixp.declarerank3(\"alpsqrtgamTEMUD\",\"nosym\")"
+    "#                         + alpha*u0*gammaDD[i][j]*ValenciavU_dD[i][k]\\\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, we will build the derivatives of the magnetic field. We will build one expression for the divergence of $b^i$, $b^i_{,i}$ (reducing to functions of $\\tilde{B}^i$ (which is itself a function of $B^i$) since $\\tilde{B}^i$ is divergenceless) and another for $b^i_{,l}$, reducing to functions of second derivatives of the vector potential $A_i$:\n",
+    "Now, we will build the derivatives of the magnetic field. We will build one expression for the divergence of $b^i$, $b^i_{,i}$ (reducing to functions of $\\tilde{B}^i$ (which is itself a function of $B^i$) since $\\tilde{B}^i$ is divergenceless) and another for $b^i_{,l}$, reducing to functions of second derivatives of the vector potential $A_i$. That is, since \n",
+    "$$\n",
+    "b^i_{,k} = \\frac{1}{\\sqrt{4 \\pi}} \\frac{\\left(\\alpha u^0\\right)  \\left(B^i_{,k} + u_{j,k} B^j u^i + u_j B^j_{,k} u^i + u_j B^j u^i_{,k}\\right) - \\left(B^i + (u_j B^j) u^i\\right) \\partial_k \\left(\\alpha u^0\\right)}{\\left(\\alpha u^0\\right)^2},\n",
+    "$$\n",
+    "\n",
+    "we will need to define\n",
     "\\begin{align}\n",
-    "b^i_{,k} &= \\frac{1}{\\sqrt{4 \\pi}} \\frac{\\alpha u^0 (B^i_{,k} + u_{j,k} B^j u^i + u_j B^j_{,k} u^i + u_j B^j u^i_{,k}) - (B^i + u_j B^j u^i)(\\alpha_{,k} u^0 + \\alpha u^0_{,k})}{(\\alpha u^0)^2} \\\\\n",
     "B^i_{,i} &= -\\frac{\\gamma_{,i} \\tilde{B}^i}{\\gamma^{3/2}} = -\\frac{\\gamma_{,i} B^i}{2\\gamma} \\\\\n",
     "B^i_{,l} &= -\\frac{\\gamma_{,l}}{2\\gamma} B^i + \\epsilon^{ijk} A_{k,jl}, i \\neq l, \\\\\n",
     "\\end{align}\n",
@@ -393,7 +404,7 @@
    "source": [
     "Now, we will code the derivatives of the spatial components of $b^{\\mu}$, $b^i$.\n",
     "$$\n",
-    "b^i_{,k} = \\frac{1}{\\sqrt{4 \\pi}} \\frac{\\alpha u^0 (B^i_{,k} + u_{j,k} B^j u^i + u_j B^j_{,k} u^i + u_j B^j u^i_{,k}) - (B^i + u_j B^j u^i)(\\alpha_{,k} u^0 + \\alpha u^0_{,k})}{(\\alpha u^0)^2} \n",
+    "b^i_{,k} = \\frac{1}{\\sqrt{4 \\pi}} \\frac{\\left(\\alpha u^0\\right)  \\left(B^i_{,k} + u_{j,k} B^j u^i + u_j B^j_{,k} u^i + u_j B^j u^i_{,k}\\right) - \\left(B^i + (u_j B^j) u^i\\right) \\partial_k \\left(\\alpha u^0\\right)}{\\left(\\alpha u^0\\right)^2} \n",
     "$$\n",
     "\n",
     "Let's go into a little more detail on where this comes from. We start from the definition $$b^i = \\frac{B^i + (u_j B^j) u^i}{\\sqrt{4\\pi}\\alpha u^0};$$ We then apply the quotient rule: \n",
@@ -402,7 +413,12 @@
     "&= \\frac{1}{\\sqrt{4 \\pi}} \\frac{\\left(\\alpha u^0\\right) \\partial_k \\left(B^i + (u_j B^j) u^i\\right) - \\left(B^i + (u_j B^j) u^i\\right) \\partial_k \\left(\\alpha u^0\\right)}{\\left(\\alpha u^0\\right)^2} \\\\\n",
     "\\end{align}\n",
     "Note that $\\left( \\alpha u^0 \\right)$ is being used as its own gridfunction, so we can be done with that term. We will now apply the product rule to the term $\\partial_k \\left(B^i + (u_j B^j) u^i\\right) = B^i_{,k} + u_{j,k} B^j u^i + u_j B^j_{,k} u^i + u_j B^j u^i_{,k}$. So, \n",
-    "$$ b^i_{,k} = \\frac{1}{\\sqrt{4 \\pi}} \\frac{\\left(\\alpha u^0\\right)  \\left(B^i_{,k} + u_{j,k} B^j u^i + u_j B^j_{,k} u^i + u_j B^j u^i_{,k}\\right) - \\left(B^i + (u_j B^j) u^i\\right) \\partial_k \\left(\\alpha u^0\\right)}{\\left(\\alpha u^0\\right)^2}. $$"
+    "$$ b^i_{,k} = \\frac{1}{\\sqrt{4 \\pi}} \\frac{\\left(\\alpha u^0\\right)  \\left(B^i_{,k} + u_{j,k} B^j u^i + u_j B^j_{,k} u^i + u_j B^j u^i_{,k}\\right) - \\left(B^i + (u_j B^j) u^i\\right) \\partial_k \\left(\\alpha u^0\\right)}{\\left(\\alpha u^0\\right)^2}. $$\n",
+    "\n",
+    "It will be easier to cod this up if we rearrange these terms to group together the terms that involve contractions over $j$. Doing that, we find\n",
+    "$$\n",
+    "b^i_{,k} = \\frac{\\overbrace{\\alpha u^0 B^i_{,k} - B^i \\partial_k (\\alpha u^0)}^{\\rm Term\\ Num1} + \\overbrace{\\left( \\alpha u^0 \\right) \\left( u_{j,k} B^j u^i + u_j B^j_{,k} u^i + u_j B^j u^i_{,k} \\right) - \\left( u_j B^j u^i \\right) \\partial_k \\left( \\alpha u^0 \\right) }^{\\rm Term\\ Num2}}{\\underbrace{\\sqrt{4 \\pi} \\left( \\alpha u^0 \\right)^2}_{\\rm Term\\ Denom}}.\n",
+    "$$"
    ]
   },
   {
@@ -417,16 +433,22 @@
     "    for j in range(DIM):\n",
     "        divb += alphau0*(uD_dD[j][i]*BU[j]*uU[i]+uD[j]*BU_dD[j][i]*uU[i]+uD[j]*BU[j]*uU_dD[i][i])\\\n",
     "                -(uD[j]*BU[j]*uU[i])*alphau0_dD[i]\n",
-    "divb /= sp.sqrt(4*M_PI) * alpha * u0 * alpha * u0\n",
+    "divb /= sp.sqrt(4*M_PI) * alphau0 * alphau0\n",
     "\n",
     "smallbU_dD = ixp.zerorank2()\n",
     "for i in range(DIM):\n",
     "    for k in range(DIM):\n",
+    "        # Add the terms from Term Num1\n",
     "        smallbU_dD[i][k] += alphau0*BU_dD[i][k]-BU[i]*alphau0_dD[k]\n",
     "        for j in range(DIM):\n",
+    "            # Add the terms from Term Num2 that require contractions over k, and thus an extra loop.\n",
     "            smallbU_dD[i][k] += alphau0*(uD_dD[j][k]*BU[j]*uU[i]+uD[j]*BU_dD[j][k]*uU[i]+uD[j]*BU[j]*uU_dD[i][k])\\\n",
     "                                -(uD[j]*BU[j]*uU[i])*alphau0_dD[k]\n",
-    "        smallbU_dD[i][k] /= sp.sqrt(4*M_PI) * alpha * u0 * alpha * u0\n"
+    "            \n",
+    "for i in range(DIM):\n",
+    "    for k in range(DIM):\n",
+    "        # Term Denom requires us to divide the whole expressions through by sqrt(4 pi) * (alpha u^0)^2\n",
+    "        smallbU_dD[i][k] /= sp.sqrt(4*M_PI) * alphau0 * alphau0\n"
    ]
   },
   {
