finite_difference.py: Implement algorithm for upwinded derivatives. Also improve documentation and rerun affected notebooks. No functional change in previous notebooks.

--- a/Tutorial-Start_to_Finish-ScalarWaveCurvilinear.ipynb
+++ b/Tutorial-Start_to_Finish-ScalarWaveCurvilinear.ipynb
@@ -215,7 +215,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting ScalarWaveCurvilinear/curvilinear_boundary_conditions.h\n"
+      "Writing ScalarWaveCurvilinear/curvilinear_boundary_conditions.h\n"
      ]
     }
    ],
