--- a/Tutorial-Finite_Difference_Derivatives.ipynb
+++ b/Tutorial-Finite_Difference_Derivatives.ipynb
@@ -145,27 +145,27 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "    /* \n",
-      "     * Step 1 of 2: Read from main memory and compute finite difference stencils (if any):\n",
-      "     */\n",
-      "    /*\n",
-      "     *  Original SymPy expression:\n",
-      "     *  \"const double phi_dDD00 = invdx0**2*(-5*phi/2 + 4*phi_i0m1/3 - phi_i0m2/12 + 4*phi_i0p1/3 - phi_i0p2/12)\"\n",
-      "     */\n",
-      "    const double phi_i0m2 = in_gfs[IDX2(PHIGF, i0-2)];\n",
-      "    const double phi_i0m1 = in_gfs[IDX2(PHIGF, i0-1)];\n",
-      "    const double phi = in_gfs[IDX2(PHIGF, i0)];\n",
-      "    const double phi_i0p1 = in_gfs[IDX2(PHIGF, i0+1)];\n",
-      "    const double phi_i0p2 = in_gfs[IDX2(PHIGF, i0+2)];\n",
-      "    const double phi_dDD00 = pow(invdx0, 2)*(-5.0/2.0*phi + (4.0/3.0)*phi_i0m1 - 1.0/12.0*phi_i0m2 + (4.0/3.0)*phi_i0p1 - 1.0/12.0*phi_i0p2);\n",
-      "    /* \n",
-      "     * Step 2 of 2: Evaluate SymPy expressions and write to main memory:\n",
-      "     */\n",
-      "    /*\n",
-      "     *  Original SymPy expression:\n",
-      "     *  \"out_gf[IDX2(OUTPUTGF, i0)] = phi_dDD00\"\n",
-      "     */\n",
-      "    out_gf[IDX2(OUTPUTGF, i0)] = phi_dDD00;\n",
+      "   /* \n",
+      "    * NRPy+ Finite Difference Code Generation, Step 1 of 2: Read from main memory and compute finite difference stencils:\n",
+      "    */\n",
+      "   /*\n",
+      "    *  Original SymPy expression:\n",
+      "    *  \"const double phi_dDD00 = invdx0**2*(-5*phi/2 + 4*phi_i0m1/3 - phi_i0m2/12 + 4*phi_i0p1/3 - phi_i0p2/12)\"\n",
+      "    */\n",
+      "   const double phi_i0m2 = in_gfs[IDX2(PHIGF, i0-2)];\n",
+      "   const double phi_i0m1 = in_gfs[IDX2(PHIGF, i0-1)];\n",
+      "   const double phi = in_gfs[IDX2(PHIGF, i0)];\n",
+      "   const double phi_i0p1 = in_gfs[IDX2(PHIGF, i0+1)];\n",
+      "   const double phi_i0p2 = in_gfs[IDX2(PHIGF, i0+2)];\n",
+      "   const double phi_dDD00 = pow(invdx0, 2)*(-5.0/2.0*phi + (4.0/3.0)*phi_i0m1 - 1.0/12.0*phi_i0m2 + (4.0/3.0)*phi_i0p1 - 1.0/12.0*phi_i0p2);\n",
+      "   /* \n",
+      "    * NRPy+ Finite Difference Code Generation, Step 2 of 2: Evaluate SymPy expressions and write to main memory:\n",
+      "    */\n",
+      "   /*\n",
+      "    *  Original SymPy expression:\n",
+      "    *  \"out_gf[IDX2(OUTPUTGF, i0)] = phi_dDD00\"\n",
+      "    */\n",
+      "   out_gf[IDX2(OUTPUTGF, i0)] = phi_dDD00;\n",
       "}\n",
       "\n"
      ]
@@ -210,21 +210,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
