BSSN_RHSs.py: Implement Brown's covariant shift, as option

--- a/Tutorial-BSSNCurvilinear.ipynb
+++ b/Tutorial-BSSNCurvilinear.ipynb
@@ -1339,9 +1339,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 14, Option 1: \\partial_t \\beta^i = \\beta^j \\beta^i_{,j} + B^i\n",
+    "# Step 14: Set \\partial_t \\beta^i\n",
     "beta_rhsU = ixp.zerorank1()\n",
     "if par.parval_from_str(\"BSSN_RHSs::ShiftEvolutionOption\") == \"GammaDriving2ndOrder_NoCovariant\":\n",
+    "    # Step 14 Option 1: \\partial_t \\beta^i = \\beta^j \\beta^i_{,j} + B^i\n",
     "    # First define BU, in terms of rescaled variable \\bet^i\n",
     "    BU = ixp.zerorank1()\n",
     "    for i in range(DIM):\n",
@@ -1361,7 +1362,18 @@
     "**Option 2: Covariant, Second-Order Shift**\n",
     "\n",
     "This is [Brown's](https://arxiv.org/abs/0902.3652) suggested formulation (Eq. 20b; note that Eq. 20a is the same as our lapse condition, as $\\bar{D}_j \\alpha = \\partial_j \\alpha$ for scalar $\\alpha$):\n",
-    "$$\\partial_t \\beta^i = \\left[\\beta^j \\bar{D}_j \\beta^i\\right] + B^{i}$$"
+    "$$\\partial_t \\beta^i = \\left[\\beta^j \\bar{D}_j \\beta^i\\right] + B^{i}$$\n",
+    "Based on the definition of covariant derivative, we have\n",
+    "$$\n",
+    "\\bar{D}_{j} \\beta^{i} = \\beta^i_{,j} + \\bar{\\Gamma}^i_{mj} \\beta^m,\n",
+    "$$\n",
+    "so the above equation becomes\n",
+    "\\begin{align}\n",
+    "\\partial_t \\beta^i &= \\left[\\beta^j \\left(\\beta^i_{,j} + \\bar{\\Gamma}^i_{mj} \\beta^m\\right)\\right] + B^{i}\\\\\n",
+    "&= {\\underbrace {\\textstyle \\beta^j \\beta^i_{,j}}_{\\text{Term 1}}} + \n",
+    "{\\underbrace {\\textstyle \\beta^j \\bar{\\Gamma}^i_{mj} \\beta^m}_{\\text{Term 2}}} + \n",
+    "{\\underbrace {\\textstyle B^i}_{\\text{Term 3}}} \n",
+    "\\end{align}\n"
    ]
   },
   {
@@ -1371,7 +1383,26 @@
    "outputs": [],
    "source": [
     "if par.parval_from_str(\"BSSN_RHSs::ShiftEvolutionOption\") == \"GammaDriving2ndOrder_Covariant\":\n",
-    "    pass"
+    "    # Step 14 Option 2: \\partial_t \\beta^i = \\left[\\beta^j \\bar{D}_j \\beta^i\\right] + B^{i}\n",
+    "    # First define BU, in terms of rescaled variable \\bet^i\n",
+    "    BU = ixp.zerorank1()\n",
+    "    for i in range(DIM):\n",
+    "        BU[i] = betU[i]*rfm.ReU[i]\n",
+    "\n",
+    "    # Then compute right-hand side:\n",
+    "    # Term 1: \\beta^j \\beta^i_{,j}\n",
+    "    for i in range(DIM):\n",
+    "        for j in range(DIM):\n",
+    "            beta_rhsU[i] += betaU[j]*betaU_dupD[i][j]\n",
+    "\n",
+    "    # Term 2: \\beta^j \\bar{\\Gamma}^i_{mj} \\beta^m\n",
+    "    for i in range(DIM):\n",
+    "        for j in range(DIM):\n",
+    "            for m in range(DIM):\n",
+    "                beta_rhsU[i] += betaU[j]*GammabarUDD[i][m][j]*betaU[m]\n",
+    "    # Term 3: B^i\n",
+    "    for i in range(DIM):\n",
+    "        beta_rhsU[i] += BU[i]"
    ]
   },
   {
@@ -1390,14 +1421,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 15: \\partial_t B^i = \\beta^j \\partial_j B^i\n",
-    "#          + \\frac{3}{4} \\partial_{0} \\bar{\\Lambda}^{i} - \\eta B^{i}\n",
+    "# Step 15: Evaluate \\partial_t B^i\n",
     "\n",
     "# Step 15a: Declare free parameter eta and B_rhsU\n",
     "eta = par.Cparameters(\"REAL\",thismodule,[\"eta\"])\n",
     "B_rhsU = ixp.zerorank1()\n",
     "\n",
     "if par.parval_from_str(\"BSSN_RHSs::ShiftEvolutionOption\") == \"GammaDriving2ndOrder_NoCovariant\":\n",
+    "    # Step 15: Non-covariant option:\n",
+    "    #  \\partial_t B^i = \\beta^j \\partial_j B^i\n",
+    "    #                 + \\frac{3}{4} \\partial_{0} \\bar{\\Lambda}^{i} - \\eta B^{i}\n",
     "    # Step 15b: Define BU_dupD, in terms of derivative of rescaled variable \\bet^i\n",
     "    BU_dupD = ixp.zerorank2()\n",
     "    betU_dupD = ixp.declarerank2(\"betU_dupD\",\"nosym\")\n",
@@ -1427,7 +1460,22 @@
     "**Option 2: Covariant, Second-Order Shift**\n",
     "\n",
     "This is [Brown's](https://arxiv.org/abs/0902.3652) suggested formulation (Eq. 20c):\n",
-    "$$\\partial_t B^i = \\left[\\beta^j \\bar{D}_j B^i\\right] + \\frac{3}{4}\\left( \\partial_t \\bar{\\Lambda}^{i} - \\beta^j \\bar{D}_j \\bar{\\Lambda}^{i} \\right) - \\eta B^{i}$$"
+    "$$\\partial_t B^i = \\left[\\beta^j \\bar{D}_j B^i\\right] + \\frac{3}{4}\\left( \\partial_t \\bar{\\Lambda}^{i} - \\beta^j \\bar{D}_j \\bar{\\Lambda}^{i} \\right) - \\eta B^{i}$$\n",
+    "\n",
+    "Based on the definition of covariant derivative, we have for vector $V^i$\n",
+    "$$\n",
+    "\\bar{D}_{j} V^{i} = V^i_{,j} + \\bar{\\Gamma}^i_{mj} V^m,\n",
+    "$$\n",
+    "so the above equation becomes\n",
+    "\\begin{align}\n",
+    "\\partial_t B^i &= \\left[\\beta^j \\left(B^i_{,j} + \\bar{\\Gamma}^i_{mj} B^m\\right)\\right] + \\frac{3}{4}\\left[ \\partial_t \\bar{\\Lambda}^{i} - \\beta^j \\left(\\bar{\\Lambda}^i_{,j} + \\bar{\\Gamma}^i_{mj} \\bar{\\Lambda}^m\\right) \\right] - \\eta B^{i} \\\\\n",
+    "&= {\\underbrace {\\textstyle \\beta^j B^i_{,j}}_{\\text{Term 1}}} + \n",
+    "{\\underbrace {\\textstyle \\beta^j \\bar{\\Gamma}^i_{mj} B^m}_{\\text{Term 2}}} + \n",
+    "{\\underbrace {\\textstyle \\frac{3}{4}\\partial_t \\bar{\\Lambda}^{i}}_{\\text{Term 3}}} -\n",
+    "{\\underbrace {\\textstyle \\frac{3}{4}\\beta^j \\bar{\\Lambda}^i_{,j}}_{\\text{Term 4}}} -\n",
+    "{\\underbrace {\\textstyle \\frac{3}{4}\\beta^j \\bar{\\Gamma}^i_{mj} \\bar{\\Lambda}^m}_{\\text{Term 5}}} -\n",
+    "{\\underbrace {\\textstyle \\eta B^i}_{\\text{Term 6}}}\n",
+    "\\end{align}"
    ]
   },
   {
@@ -1437,7 +1485,44 @@
    "outputs": [],
    "source": [
     "if par.parval_from_str(\"BSSN_RHSs::ShiftEvolutionOption\") == \"GammaDriving2ndOrder_Covariant\":\n",
-    "    pass"
+    "    # Step 15: Covariant option:\n",
+    "    #  \\partial_t B^i = \\beta^j \\bar{D}_j B^i\n",
+    "    #               + \\frac{3}{4} ( \\partial_t \\bar{\\Lambda}^{i} - \\beta^j \\bar{D}_j \\bar{\\Lambda}^{i} ) \n",
+    "    #               - \\eta B^{i}\n",
+    "    #                 = \\beta^j B^i_{,j} + \\beta^j \\bar{\\Gamma}^i_{mj} B^m\n",
+    "    #               + \\frac{3}{4}[ \\partial_t \\bar{\\Lambda}^{i} \n",
+    "    #                            - \\beta^j (\\bar{\\Lambda}^i_{,j} + \\bar{\\Gamma}^i_{mj} \\bar{\\Lambda}^m)] \n",
+    "    #               - \\eta B^{i}\n",
+    "    # Term 1, part a: First compute B^i_{,j} using upwinded derivative\n",
+    "    BU_dupD = ixp.zerorank2()\n",
+    "    betU_dupD = ixp.declarerank2(\"betU_dupD\",\"nosym\")\n",
+    "    for i in range(DIM):\n",
+    "        for j in range(DIM):\n",
+    "            BU_dupD[i][j] = betU_dupD[i][j]*rfm.ReU[i] + betU[i]*rfm.ReUdD[i][j]\n",
+    "    # Term 1: \\beta^j B^i_{,j}\n",
+    "    for i in range(DIM):\n",
+    "        for j in range(DIM):\n",
+    "            B_rhsU[i] += betaU[j]*BU_dupD[i][j]\n",
+    "    # Term 2: \\beta^j \\bar{\\Gamma}^i_{mj} B^m\n",
+    "    for i in range(DIM):\n",
+    "        for j in range(DIM):\n",
+    "            for m in range(DIM):\n",
+    "                B_rhsU[i] += betaU[j]*GammabarUDD[i][m][j]*BU[m]\n",
+    "    # Term 3: \\frac{3}{4}\\partial_t \\bar{\\Lambda}^{i}\n",
+    "    for i in range(DIM):\n",
+    "        B_rhsU[i] += sp.Rational(3,4)*Lambar_rhsU[i]\n",
+    "    # Term 4: -\\frac{3}{4}\\beta^j \\bar{\\Lambda}^i_{,j}\n",
+    "    for i in range(DIM):\n",
+    "        for j in range(DIM):\n",
+    "            B_rhsU[i] += -sp.Rational(3,4)*betaU[j]*LambarU_dupD[i][j]\n",
+    "    # Term 5: -\\frac{3}{4}\\beta^j \\bar{\\Gamma}^i_{mj} \\bar{\\Lambda}^m\n",
+    "    for i in range(DIM):\n",
+    "        for j in range(DIM):\n",
+    "            for m in range(DIM):\n",
+    "                B_rhsU[i] += -sp.Rational(3,4)*betaU[j]*GammabarUDD[i][m][j]*LambarU[m]\n",
+    "    # Term 6: - \\eta B^i\n",
+    "    for i in range(DIM):\n",
+    "        B_rhsU[i] += -eta*BU[i]"
    ]
   },
   {
