Tutorial-Start_to_Finish-ScalarWaveCurvilinear: Modernize scalar wave start-to-finish tutorial to catch up with BSSNCurvilinear-Two_BHs_Collide

--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb
@@ -846,6 +846,7 @@
     "\n",
     "#include \"enforce_detgammabar_constraint.h\"\n",
     "\n",
+    "// Step P9: Find the CFL-constrained timestep\n",
     "REAL find_timestep(const int Nxx_plus_2NGHOSTS[3],const REAL dxx[3],REAL *xx[3], const REAL CFL_FACTOR) {\n",
     "  const REAL dxx0 = dxx[0], dxx1 = dxx[1], dxx2 = dxx[2];\n",
     "  REAL dsmin = 1e38; // Start with a crazy high value... close to the largest number in single precision.\n",
@@ -863,7 +864,7 @@
     "// Contains BSSN_ID() for BrillLindquist initial data\n",
     "#include \"BrillLindquist.h\"\n",
     "\n",
-    "// Step P9: Declare the function for the exact solution. time==0 corresponds to the initial data.\n",
+    "// Step P10: Declare the function for the exact solution. time==0 corresponds to the initial data.\n",
     "void initial_data(const int Nxx_plus_2NGHOSTS[3],REAL *xx[3], REAL *in_gfs) {\n",
     "#pragma omp parallel for\n",
     "  LOOP_REGION(0,Nxx_plus_2NGHOSTS[0], 0,Nxx_plus_2NGHOSTS[1], 0,Nxx_plus_2NGHOSTS[2]) {\n",
