--- a/Tutorial-GiRaFFE_Higher_Order.ipynb
+++ b/Tutorial-GiRaFFE_Higher_Order.ipynb
@@ -281,7 +281,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If we look at the evolution equation, we see that we will need spatial  derivatives of $T^{\\mu\\nu}_{\\rm EM}$; we will now now take these derivatives, applying the chain rule until it is only in terms of basic gridfunctions: $\\alpha$, $\\beta^i$, $\\gamma_{ij}$, $A_i$, and the Valencia 3-velocity, $v^i_{(n)}$. We will need the definitions of $\\tilde{B}^i$ and $B^i$ in terms of $B^i$ and $A_i$:\n",
+    "If we look at the evolution equation, we see that we will need spatial  derivatives of $T^{\\mu\\nu}_{\\rm EM}$. In previous tutorials, when confronted with derivatives of complicated expressions, we have declared those expressions and gridfunctions themselves, thus allowing NRPy+ to take finite-difference derivatives of the expressions. This generally reduces the error, because the alternative is to use a function of several finite-difference derivatives, allowing more error to accumulate than the extra gridfunction will introduce. While we will use that technique for some of the subexpressions of $T^{\\mu\\nu}_{\\rm EM}$, we don't want to rely on it for the whole expression; doing so would require us to take the derivative of the magnetic field $B^i$, which is itself found by finite-differencing the vector potential $A_i$. It requires some finesse, then, to find $B^i$ inside the ghost zones, and those values of $B^i$ are necessarily less accurate; taking another derivative from them would only compound the problem. Instead, we will take analytic derivatives of $T^{\\mu\\nu}_{\\rm EM}$.\n",
+    "\n",
+    "We will now now take these spatial  derivatives of $T^{\\mu\\nu}_{\\rm EM}$, applying the chain rule until it is only in terms of basic gridfunctions: $\\alpha$, $\\beta^i$, $\\gamma_{ij}$, $A_i$, and the Valencia 3-velocity, $v^i_{(n)}$. We will need the definitions of $\\tilde{B}^i$ and $B^i$ in terms of $B^i$ and $A_i$:\n",
     "\\begin{align}\n",
     "\\tilde{B}^i &= \\sqrt{\\gamma} B^i \\\\\n",
     "B^i &= \\epsilon^{ijk} \\partial_j A_k \\\\\n",
@@ -313,12 +315,9 @@
     "\\begin{align}\n",
     "%u^i_{,j} &= u^0_{,j} (\\alpha v^i_{(n)} - \\beta^i) + u^0 (\\alpha_{,j} v^i_{(n)} + \\alpha v^i_{(n),j} - \\beta^i_{,j}) \\\\\n",
     "%u_{j,k} &= \\alpha_{,k} u^0 \\gamma_{ij} v^i_{(n)} + \\alpha u^0_{,k} \\gamma_{ij} v^i_{(n)} + \\alpha u^0 \\gamma_{ij,k} v^i_{(n)} + \\alpha u^0 \\gamma_{ij} v^i_{(n),k} \\\\\n",
-    "b^i_{,k} &= \\frac{1}{\\sqrt{4 \\pi}} \\frac{\\alpha u^0 (B^i_{,k} + u_{j,k} B^j u^i + u_j B^j_{,k} u^i + u_j B^j u^i_{,k}) - (B^i + u_j B^j u^i)(\\alpha_{,k} u^0 + \\alpha u^0_{,k})}{(\\alpha u^0)^2} \\\\\n",
+    "b^i_{,k} &= \\frac{1}{\\sqrt{4 \\pi}} \\frac{\\left(\\alpha u^0\\right)  \\left(B^i_{,k} + u_{j,k} B^j u^i + u_j B^j_{,k} u^i + u_j B^j u^i_{,k}\\right) - \\left(B^i + (u_j B^j) u^i\\right) \\partial_k \\left(\\alpha u^0\\right)}{\\left(\\alpha u^0\\right)^2} \\\\\n",
     "B^i_{,i} &= -\\frac{\\gamma_{,i} B^i}{2\\gamma} \\\\\n",
-    "B^i_{,l} &= \\partial_l \\left( \\frac{[ijk]}{\\sqrt{\\gamma}} \\partial_j A_k \\right) = [ijk] \\partial_l \\left( \\frac{1}{\\sqrt{\\gamma}}\\right) \\partial_j A_k + \\frac{[ijk]}{\\sqrt{\\gamma}} \\partial_l \\partial_j A_k \\\\\n",
-    "&= [ijk]\\left(-\\frac{\\gamma_{,l}}{2\\gamma^{3/2}}\\right) \\partial_j A_k + \\frac{[ijk]}{\\sqrt{\\gamma}} \\partial_l \\partial_j A_k \\\\\n",
-    "&= -\\frac{\\gamma_{,l}}{2\\gamma} \\epsilon^{ijk} \\partial_j A_k + \\epsilon^{ijk} \\partial_l \\partial_j A_k \\\\\n",
-    "&= -\\frac{\\gamma_{,l}}{2\\gamma} B^i + \\epsilon^{ijk} A_{k,jl}, i \\neq l, \\\\\n",
+    "B^i_{,l} &= -\\frac{\\gamma_{,l}}{2\\gamma} B^i + \\epsilon^{ijk} A_{k,jl}, i \\neq l, \\\\\n",
     "\\end{align}\n",
     "\n",
     "First, we will handle the derivatives of the velocity $u^i$ and its lowered form. We will simply use finite-difference derivatives here by setting $u^i$ and $u_i$ as gridfunctions (done above). This will reduce the chances for finite differencing errors to accumulate, because the alternative is to use a function of several finite-difference derivatives."
@@ -365,7 +364,32 @@
     "b^i_{,k} = \\frac{1}{\\sqrt{4 \\pi}} \\frac{\\left(\\alpha u^0\\right)  \\left(B^i_{,k} + u_{j,k} B^j u^i + u_j B^j_{,k} u^i + u_j B^j u^i_{,k}\\right) - \\left(B^i + (u_j B^j) u^i\\right) \\partial_k \\left(\\alpha u^0\\right)}{\\left(\\alpha u^0\\right)^2},\n",
     "$$\n",
     "\n",
-    "we will need to define\n",
+    "we will need to define $B^i_{,i}$ and $B^i_{,l}$. For the divergence $B^i_{,i}$, since $B^i = \\tilde{B}^i/\\sqrt{\\gamma}$,\n",
+    "the quotient rule tells us that \n",
+    "\\begin{align}\n",
+    "B^i_{,i} &= \\frac{\\sqrt{\\gamma}\\tilde{B}^i_{,i} - \\tilde{B}^i \\partial_i \\sqrt{\\gamma}}{\\sqrt{\\gamma}^2} \\\\\n",
+    "         &= \\frac{\\sqrt{\\gamma}\\tilde{B}^i_{,i} - \\tilde{B}^i \\frac{1}{2\\sqrt{\\gamma}} \\gamma_{,i}}{\\gamma}. \\\\\n",
+    "\\end{align}\n",
+    "Since we have defined $\\tilde{B}^i = 0$, the first term in the numerator vanishes, and we are left with\n",
+    "\\begin{align}\n",
+    "B^i_{,i} &= \\frac{-\\tilde{B}^i \\frac{1}{2\\sqrt{\\gamma}} \\gamma_{,i}}{\\gamma} \\\\\n",
+    "         &= \\frac{-\\gamma_{,i} \\tilde{B}^i}{2\\gamma^{3/2}} \\\\\n",
+    "         &= \\frac{-\\gamma_{,i} B^i}{2\\gamma}, \\\\\n",
+    "\\end{align}\n",
+    "because we have defined $\\tilde{B}^i = \\sqrt{\\gamma} B^i$. Let us now give a similar treatment to the derivative $B^i_{,l}$; we will start from the definition of $B^i$ in terms of $A_i$, $B^i = \\frac{[ijk]}{\\sqrt{\\gamma}} \\partial_j A_k$. We will first apply the product rule, noting that the symbol $[ijk]$ consists purely of the integers $-1, 0, 1$ and thus can be treated as a constant in this process.\n",
+    "\\begin{align}\n",
+    "B^i_{,l} &= \\partial_l \\left( \\frac{[ijk]}{\\sqrt{\\gamma}} \\partial_j A_k \\right)  \\\\\n",
+    "         &= [ijk] \\partial_l \\left( \\frac{1}{\\sqrt{\\gamma}}\\right) \\partial_j A_k + \\frac{[ijk]}{\\sqrt{\\gamma}} \\partial_l \\partial_j A_k \\\\\n",
+    "         &= [ijk]\\left(-\\frac{\\gamma_{,l}}{2\\gamma^{3/2}}\\right) \\partial_j A_k + \\frac{[ijk]}{\\sqrt{\\gamma}} \\partial_l \\partial_j A_k \\\\\n",
+    "\\end{align}\n",
+    "Now, we will substitute back in for the definition of the Levi-Civita tensor: $\\epsilon^{ijk} = [ijk] / \\sqrt{\\gamma}$. Then will substitute the magnetic field $B^i$ back in.\n",
+    "\\begin{align}\n",
+    "B^i_{,l} &= -\\frac{\\gamma_{,l}}{2\\gamma} \\epsilon^{ijk} \\partial_j A_k + \\epsilon^{ijk} \\partial_l \\partial_j A_k \\\\\n",
+    "         &= -\\frac{\\gamma_{,l}}{2\\gamma} B^i + \\epsilon^{ijk} A_{k,jl}, i \\neq l, \\\\\n",
+    "\\end{align}\n",
+    "Note that the first term here is identical to the divergence $B^i_{,i}$, so these expressions are consistent given that the divergence of a curl must be zero. \n",
+    "\n",
+    "Thus, the expressions we are left with for the derivatives of the magnetic field are:\n",
     "\\begin{align}\n",
     "B^i_{,i} &= -\\frac{\\gamma_{,i} \\tilde{B}^i}{\\gamma^{3/2}} = -\\frac{\\gamma_{,i} B^i}{2\\gamma} \\\\\n",
     "B^i_{,l} &= -\\frac{\\gamma_{,l}}{2\\gamma} B^i + \\epsilon^{ijk} A_{k,jl}, i \\neq l, \\\\\n",
@@ -395,7 +419,7 @@
     "        BU_dD[i][l] = -gammadet_dD[l]*BU[i]/(2*gammadet)\n",
     "        for j in range(DIM):\n",
     "            for k in range(DIM):\n",
-    "                BU_dD[i][l] += LeviCivitaUUU[i][j][k] * AD_dDD[k][j][l]"
+    "                BU_dD[i][l] += LeviCivitaUUU[i][j][k] * AD_dDD[k][j][l]\n"
    ]
   },
   {
