--- a/Tutorial-GiRaFFE_Higher_Order.ipynb
+++ b/Tutorial-GiRaFFE_Higher_Order.ipynb
@@ -179,13 +179,16 @@
     "Since this expression mixes Greek and Latin indices, we will need to store the expressions for each of the three spatial derivatives as separate variables. \n",
     "Also, consider the term $\\beta_{i,j} = \\partial_j \\beta_i = \\partial_j (\\gamma_{ik} \\beta^k) =  \\gamma_{ik} \\partial_j\\beta^k + \\beta^k \\partial_j \\gamma_{ik} = \\gamma_{ik} \\beta^k_{\\ ,j} + \\beta^k \\gamma_{ik,j}$, that is, \n",
     "\\begin{align}\n",
-    "\\beta_{i,j} &= \\gamma_{ik} \\beta^k_{\\ ,j} + \\beta^k \\gamma_{ik,j} \\\\\n",
-    "\\end{align}"
+    "\\beta_{i,j} &= \\gamma_{ik} \\beta^k_{\\ ,j} + \\beta^k \\gamma_{ik,j}. \\\\\n",
+    "\\end{align}\n",
+    "\n",
+    "So, we will first set \n",
+    "$$ g_{00,l} = \\underbrace{-2\\alpha \\alpha_{,l}}_{\\rm Term\\ 1} + \\underbrace{\\beta^k_{\\ ,l} \\beta_k}_{\\rm Term\\ 2} + \\underbrace{\\beta^k \\beta_{k,l}}_{\\rm Term\\ 3} $$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,8 +201,6 @@
     "# Step 3b: These derivatives will be constructed analytically.\n",
     "betaDdD    = ixp.zerorank2()\n",
     "\n",
-    "# Zach says: Just set this up as a rank3 tensor with DIM=4. We'll not set the time deriv. \n",
-    "#  This will get rid of a lot of unnecessary code below.\n",
     "g4DDdD     = ixp.zerorank3(DIM=4)\n",
     "\n",
     "for i in range(DIM):\n",
@@ -221,11 +222,29 @@
     "for chi in range(1,4):\n",
     "    for k in range(DIM):\n",
     "        g4DDdD[0][0][chi] += betaU[k] * betaDdD[k][chi-1]\n",
-    "            \n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we will contruct the other components of $g_{\\mu\\nu,l}$. We will first construct \n",
+    "$$ g_{i0,l} = g_{0i,l} = \\beta_{i,l}, $$\n",
+    "then\n",
+    "$$ g_{i,l} = \\gamma_{ij,l} $$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Step 3d: Set the i0 and 0j components\n",
     "for chi in range(1,4):\n",
     "    for mu in range(1,4):\n",
-    "        g4DDdD[mu][0][i] = g4DDdD[0][mu][chi-1] = betaDdD[mu-1][chi-1]\n",
+    "        g4DDdD[mu][0][chi] = g4DDdD[0][mu][chi-1] = betaDdD[mu-1][chi-1]\n",
     "\n",
     "#Step 3e: Set the ij components\n",
     "for chi in range(1,4):\n",
@@ -252,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,24 +322,41 @@
    "metadata": {},
    "source": [
     "We now have all the pieces to calculate the stress-energy tensor,\n",
-    "$$T^{\\mu \\nu}_{\\rm EM} = b^2 u^{\\mu} u^{\\nu} + \\frac{b^2}{2} g^{\\mu \\nu} - b^{\\mu} b^{\\nu}.$$\n"
+    "$$T^{\\mu \\nu}_{\\rm EM} = \\underbrace{b^2 u^{\\mu} u^{\\nu}}_{\\rm Term\\ 1} + \n",
+    "\\underbrace{\\frac{b^2}{2} g^{\\mu \\nu}}_{\\rm Term\\ 2}\n",
+    "- \\underbrace{b^{\\mu} b^{\\nu}}_{\\rm Term\\ 3}.$$\n",
+    "Because $u^0$ is a separate variable, we could build the $00$ component separately, then the $\\mu0$ and $0\\nu$ components, and finally the $\\mu\\nu$ components. Alternatively, for clarity, we could create a temporary variable $u^\\mu=\\left( u^0, u^i \\right)$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Step 5: Construct the electromagnetic stress-energy tensor\n",
-    "TEMUU = ixp.register_gridfunctions_for_single_rank2(\"AUX\",\"TEMUU\",\"sym01\",DIM=4)\n",
+    "# Step 5a: Set up the four-velocity vector\n",
+    "u4U = ixp.zerorank1(DIM=4)\n",
+    "u4U[0] = u0\n",
+    "for i in range(DIM):\n",
+    "    u4U[i+1] = uU[i]\n",
     "\n",
-    "TEMUU[0][0] = smallb2*u0*u0 + smallb2*g4UU[0][0]/2 - smallbU[0]*smallbU[0]\n",
-    "for mu in range(1,4):\n",
-    "    TEMUU[mu][0] = TEMUU[0][mu] = smallb2*uU[mu-1]*u0 + smallb2*g4UU[mu][0]/2 - smallbU[mu]*smallbU[0]\n",
-    "for mu in range(1,4):\n",
-    "    for nu in range(1,4):\n",
-    "        TEMUU[mu][nu] = smallb2*uU[mu-1]*uU[nu-1] + smallb2*g4UU[mu][nu]/2 - smallbU[mu]*smallbU[nu]"
+    "# Step 5b: Build TEMUU itself\n",
+    "TEMUU = ixp.zerorank2(DIM=4)\n",
+    "for mu in range(4):\n",
+    "    for nu in range(4):\n",
+    "        # Term 1: \\underbrace{b^2 u^{\\mu} u^{\\nu}}\n",
+    "        TEMUU[mu][nu] = smallb2*u4U[mu]*u4U[nu]\n",
+    "\n",
+    "for mu in range(4):\n",
+    "    for nu in range(4):\n",
+    "        # Term 2: \\frac{b^2}{2} g^{\\mu \\nu}\n",
+    "        TEMUU[mu][nu] += smallb2*g4UU[mu][nu]/2\n",
+    "\n",
+    "for mu in range(4):\n",
+    "    for nu in range(4):\n",
+    "        # Term 3: b^{\\mu} b^{\\nu}\n",
+    "        TEMUU[mu][nu] += -smallbU[mu]*smallbU[nu]"
    ]
   },
   {
@@ -371,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,14 +476,14 @@
     "Thus, the expressions we are left with for the derivatives of the magnetic field are:\n",
     "\\begin{align}\n",
     "B^i_{,i} &= -\\frac{\\gamma_{,i} \\tilde{B}^i}{\\gamma^{3/2}} = -\\frac{\\gamma_{,i} B^i}{2\\gamma} \\\\\n",
-    "B^i_{,l} &= -\\frac{\\gamma_{,l}}{2\\gamma} B^i + \\epsilon^{ijk} A_{k,jl}, i \\neq l, \\\\\n",
+    "B^i_{,l} &= \\underbrace{-\\frac{\\gamma_{,l}}{2\\gamma} B^i}_{\\rm Term\\ 1} + \\underbrace{\\epsilon^{ijk} A_{k,jl}}_{\\rm Term\\ 2}, i \\neq l, \\\\\n",
     "\\end{align}\n",
     "where $\\epsilon^{ijk} = [ijk] / \\sqrt{\\gamma}$ is the antisymmetric Levi-Civita tensor and $\\gamma$ is the determinant of the three-metric.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,9 +501,14 @@
     "BU_dD = ixp.zerorank2()\n",
     "for i in range(DIM):\n",
     "    for l in range(DIM):\n",
+    "        # Term 1: -\\frac{\\gamma_{,l}}{2\\gamma} B^i\n",
     "        BU_dD[i][l] = -gammadet_dD[l]*BU[i]/(2*gammadet)\n",
+    "        \n",
+    "for i in range(DIM):\n",
+    "    for l in range(DIM):\n",
     "        for j in range(DIM):\n",
     "            for k in range(DIM):\n",
+    "                # Term 2: \\epsilon^{ijk} A_{k,jl}\n",
     "                BU_dD[i][l] += LeviCivitaUUU[i][j][k] * AD_dDD[k][j][l]\n"
    ]
   },
@@ -490,13 +531,13 @@
     "\n",
     "It will be easier to code this up if we rearrange these terms to group together the terms that involve contractions over $j$. Doing that, we find\n",
     "$$\n",
-    "b^i_{,k} = \\frac{\\overbrace{\\alpha u^0 B^i_{,k} - B^i \\partial_k (\\alpha u^0)}^{\\rm Term\\ Num1} + \\overbrace{\\left( \\alpha u^0 \\right) \\left( u_{j,k} B^j u^i + u_j B^j_{,k} u^i + u_j B^j u^i_{,k} \\right) - \\left( u_j B^j u^i \\right) \\partial_k \\left( \\alpha u^0 \\right) }^{\\rm Term\\ Num2}}{\\underbrace{\\sqrt{4 \\pi} \\left( \\alpha u^0 \\right)^2}_{\\rm Term\\ Denom}}.\n",
+    "b^i_{,k} = \\frac{\\overbrace{\\alpha u^0 B^i_{,k} - B^i \\partial_k (\\alpha u^0)}^{\\rm Term\\ Num1} + \\overbrace{\\left( \\alpha u^0 \\right) \\left( u_{j,k} B^j u^i + u_j B^j_{,k} u^i + u_j B^j u^i_{,k} \\right)}^{\\rm Term\\ Num2.a} - \\overbrace{\\left( u_j B^j u^i \\right) \\partial_k \\left( \\alpha u^0 \\right) }^{\\rm Term\\ Num2.b}}{\\underbrace{\\sqrt{4 \\pi} \\left( \\alpha u^0 \\right)^2}_{\\rm Term\\ Denom}}.\n",
     "$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,12 +553,21 @@
     "smallbU_dD = ixp.zerorank2()\n",
     "for i in range(DIM):\n",
     "    for k in range(DIM):\n",
-    "        # Add the terms from Term Num1\n",
+    "        # Add the terms from Term Num1: \\alpha u^0 B^i_{,k} - B^i \\partial_k (\\alpha u^0)\n",
     "        smallbU_dD[i][k] += alphau0*BU_dD[i][k]-BU[i]*alphau0_dD[k]\n",
+    "\n",
+    "for i in range(DIM):\n",
+    "    for k in range(DIM):\n",
     "        for j in range(DIM):\n",
-    "            # Add the terms from Term Num2 that require contractions over k, and thus an extra loop.\n",
-    "            smallbU_dD[i][k] += alphau0*(uD_dD[j][k]*BU[j]*uU[i]+uD[j]*BU_dD[j][k]*uU[i]+uD[j]*BU[j]*uU_dD[i][k])\\\n",
-    "                                -(uD[j]*BU[j]*uU[i])*alphau0_dD[k]\n",
+    "            # Add the terms from Term Num2.a that require contractions over k, and thus an extra loop.\n",
+    "            # \\left( \\alpha u^0 \\right) \\left( u_{j,k} B^j u^i + u_j B^j_{,k} u^i + u_j B^j u^i_{,k} \\right)\n",
+    "            smallbU_dD[i][k] += alphau0*(uD_dD[j][k]*BU[j]*uU[i]+uD[j]*BU_dD[j][k]*uU[i]+uD[j]*BU[j]*uU_dD[i][k])\n",
+    "\n",
+    "for i in range(DIM):\n",
+    "    for k in range(DIM):\n",
+    "        for j in range(DIM):\n",
+    "            #Term 2.b (More contractions over k): \\left( u_j B^j u^i \\right) \\partial_k \\left( \\alpha u^0 \\right)\n",
+    "            smallbU_dD[i][k] += -(uD[j]*BU[j]*uU[i])*alphau0_dD[k]\n",
     "            \n",
     "for i in range(DIM):\n",
     "    for k in range(DIM):\n",
@@ -540,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,14 +670,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will now add $${\\rm Term\\ 2} = \\gamma_{ki} \\left( b^2 u^j_{,j} u^k + b^2 u^j u^k_{,j} + \\frac{b^2}{2} g^{jk}_{\\ ,j} + b^j_{,j} b^k + b^j b^k_{,j} \\right)$$ to $\\partial_j  T^{j}_{{\\rm EM} i}$. These are the terms that involve contractions over $k$ (but no metric derivatives like Term 1 had). \n",
-    "\n",
-    "We will need to contruct spatial derivatives of the spatial components of the four metric $$g^{ij}_{\\ ,k} = \\gamma^{ij}_{\\ ,k} - \\frac{\\alpha\\beta^i \\beta^j_{,k}+\\alpha\\beta^i_{,k} \\beta^j-2\\beta^i \\beta^j \\alpha_{,k}}{\\alpha^3}$$"
+    "We will now add $${\\rm Term\\ 2} = \\gamma_{ki} \\left( b^2 u^j_{,j} u^k + b^2 u^j u^k_{,j} + \\frac{b^2}{2} g^{jk}_{\\ ,j} + b^j_{,j} b^k + b^j b^k_{,j} \\right)$$ to $\\partial_j  T^{j}_{{\\rm EM} i}$. These are the terms that involve contractions over $k$ (but no metric derivatives like Term 1 had). \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -670,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +729,7 @@
     "                for m in range(DIM):\n",
     "                    # Term 4\n",
     "                    TEMUD_dD[j][i][j] += gammaDD[k][i]*gammaDD_dD[l][m][j]*smallbU[l+1]*smallbU[m+1]*(uU[j]*uU[k]\\\n",
-    "                                                                                                      +g4UU[j+1][k+1])"
+    "                                                                                                      +g4UU[j+1][k+1])\n"
    ]
   },
   {
@@ -701,26 +749,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Step 7: Construct the evolution equation for \\tilde{S}_i\n",
-    "firstterm = ixp.zerorank1()\n",
-    "for i in range(DIM):\n",
-    "    for mu in range(DIM):\n",
-    "        for nu in range(DIM):\n",
-    "            firstterm[i] += alpha * sp.sqrt(gammadet) * TEMUU[mu][nu] * g4DDdD[mu][nu][i] / 2\n",
-    "\n",
     "# Here, we set up the necessary machinery to take FD derivatives of alpha * sqrt(gamma)\n",
     "alpsqrtgam = gri.register_gridfunctions(\"AUX\",\"alpsqrtgam\")\n",
     "alpsqrtgam = alpha*sp.sqrt(gammadet)\n",
     "alpsqrtgam_dD = ixp.declarerank1(\"alpsqrtgam_dD\")\n",
     "\n",
-    "Stilde_rhsD = ixp.register_gridfunctions_for_single_rank1(\"EVOL\",\"Stilde_rhsD\")\n",
+    "Stilde_rhsD = ixp.zerorank1()\n",
     "# The first term: \\frac{1}{2} \\alpha \\sqrt{\\gamma} T^{\\mu \\nu}_{\\rm EM} \\partial_i g_{\\mu \\nu}\n",
     "for i in range(DIM):\n",
-    "    Stilde_rhsD[i] = firstterm[i]\n",
+    "    for mu in range(4):\n",
+    "        for nu in range(4):\n",
+    "            Stilde_rhsD[i] += alpha * sp.sqrt(gammadet) * TEMUU[mu][nu] * g4DDdD[mu][nu][i+1] / 2\n",
     "\n",
     "# The second term: \\alpha \\sqrt{\\gamma} \\partial_j T^j_{{\\rm EM} i}\n",
     "for i in range(DIM):\n",
@@ -731,7 +775,7 @@
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
     "        for k in range(DIM):\n",
-    "            Stilde_rhsD[i] += -gammaDD[i][k]*TEMUU[k][j]*alpsqrtgam_dD[j]"
+    "            Stilde_rhsD[i] += -gammaDD[i][k]*TEMUU[k][j]*alpsqrtgam_dD[j]\n"
    ]
   },
   {
@@ -752,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -793,13 +837,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Step 8b: Construct the evolution equations for A_i and sqrt(gamma)Phi\n",
-    "A_rhsD = ixp.register_gridfunctions_for_single_rank1(\"EVOL\",\"A_rhsD\")\n",
-    "psi6Phi_rhs = gri.register_gridfunctions(\"EVOL\",\"psi6Phi_rhs\")\n",
+    "A_rhsD = ixp.zerorank1()\n",
+    "psi6Phi_rhs = sp.sympify(0)\n",
     "\n",
     "for i in range(DIM):\n",
     "    A_rhsD[i] = -AevolParen_dD[i]\n",
@@ -822,12 +866,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Step 9: Build the expression for \\tilde{S}_i\n",
-    "StildeD = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"StildeD\")\n",
+    "StildeD = ixp.zerorank1()\n",
     "BU = ixp.declarerank1(\"BU\") # Reset the values in BU so that the C code accesses the gridfunctions directly\n",
     "B2 = sp.sympify(0)\n",
     "for i in range(DIM):\n",
@@ -852,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
